fix contact overflow in browse page

--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -195,8 +195,18 @@
   margin-top: 15px;
 }
 
-.browse-uploaded-date {
+.contact-name-wrapper {
+  display: inline-block;
+  max-width: 180px;
+  vertical-align: middle;
+  overflow: hidden;
+}
+
+.contact-name-wrapper .browse-uploaded-date.text-truncate {
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
 }
 
 .browse-ontology-cards {
